--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thello",
+  "name": "thullo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
     "@mui/icons-material": "^5.14.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/router": "^0.0.1-beta.139",
     "@tanstack/router-devtools": "^0.0.1-beta.139",
-    "@types/node": "^20.4.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.269.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-nice-avatar": "^1.4.1"
+    "react-hook-form": "^7.45.4",
+    "react-nice-avatar": "^1.4.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/node": "^20.5.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
