--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
     "@mui/icons-material": "^5.14.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@tanstack/router": "^0.0.1-beta.139",
     "@tanstack/router-devtools": "^0.0.1-beta.139",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +28,7 @@
     "lucide-react": "^0.269.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
     "react-nice-avatar": "^1.4.1",
     "tailwind-merge": "^1.14.0",
