--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
-    "@tanstack/router": "^0.0.1-beta.139",
-    "@tanstack/router-devtools": "^0.0.1-beta.139",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.269.0",
@@ -31,6 +29,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
     "react-nice-avatar": "^1.4.1",
+    "react-router-dom": "^6.15.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.2"
