--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@hookform/resolvers": "^3.3.0",
     "@mui/icons-material": "^5.14.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -23,6 +26,7 @@
     "@tanstack/react-query-devtools": "^4.33.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lexorank": "^1.0.5",
     "lucide-react": "^0.269.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
